[tool.poetry]
name = "hash-table"
version = "0.1.0"
description = ""
authors = ["VolodymyrBor <volodymyr.borysiuk0@gmail.com >"]
readme = "README.md"
packages = [{include = "hash_table"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
